@@ -9,6 +9,8 @@ SVN trunk (1.1+svn):
    * updated translations: German, Hebrew, Norwegian, Russian
  * units
    * gave names to mermaids
+ * gameplay change :
+   * improved default weapon selection on player attack (patch #500)
  * user interface
    * centered BFW title logo on main screen for 1024x768 (still off-center for
      800x600)
